manifests/system/dex/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dex
  labels:
    app.kubernetes.io/managed-by: company-as-code
